# Carbon-Cosmos

./: README.md  requirements_230423.md
app/src/: App.css  App.js
app/src/hooks/: useCarbonOffset.js  useWallet.js
app/src/pages/: Home.js  Offset.js  Receipt.js
app/src/services/: carbonOffsetAPI.js  transactionAPI.js  walletAPI.js
app/src/utils/: offsetCalculation.js
contracts/: functionalities.md  pool.go
contracts/bridge/src/: chat_2023_09_13_23_49_39.md  contract.rs  msg.rs  state.rs
contracts/bridge/tests/: test.rs
contracts/carboncredit/burner/: handler.go
contracts/interchainnft/: handler.go
contracts/interchainnft/keeper/: ibc.go  keeper.go
contracts/interchainnft/types/: msgs.go  packet.go
contracts/offset/: Cargo.toml
contracts/offset/src/: contract.rs  msg.rs  state.rs
contracts/offset/tests/: test.rs
contracts/old/: bridge.go
contracts/receipt/src/: contract.rs  msg.rs  state.rs
contracts/receipt/tests/: test.rs
docs/: development-plan.md  folder-structure.md  golang-cosmos-handbook.tex  high-level-description.md  next-steps.md  project-initiation-milestones.md  requirements.md  requirements_reduced.md
docs/architecture/: offset-api.md
server/: app.js
server/api/controllers/: transactionController.js  userController.js
server/api/middleware/: auth.js  error.js
server/api/routes/: transactionRoutes.js  userRoutes.js
server/blockchain/: bridgeContract.js  offsetContract.js  receiptContract.js
server/db/: db.js  index.js
server/services/: transactionService.js  userService.js
server/utils/: helpers.js
(+19 files in other folders)
