[package]
name = "offset"
version = "0.1.0"
edition = "2018"
description = "Carbon offsetting smart contract for CosmWasm"
license = "Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
debug = false
rpath = false
strip = true

[dependencies]
cosmwasm-std = "0.16.2"
cosmwasm-storage = "0.16.2"
cosmwasm-vm = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dependencies.schema]
path = "../schema"

[dev-dependencies]
cosmwasm-schema = "0.16.2"
cosmwasm-vm = "0.16.2"
serde_json = "1.0"
hex = "0.4"
